--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,68 @@
   color: #61dafb;
 }
 
+
+
+
+.input-field{
+  background: rgb(231, 238, 245) !important;
+  border: 1px solid rgb(231, 239, 248) !important;
+  box-sizing: border-box !important;
+  border-radius: 3px !important;
+  width: 100% !important;
+  margin: 0px auto 20px !important;
+  padding: 15px 20px !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-size: 16px !important;
+  line-height: 24px !important;
+  letter-spacing: 1px !important;
+}
+
+
+
+
+.form-container {
+  width: 100%;
+}
+ 
+
+.button-wrapper{
+  background: linear-gradient(90deg, rgb(255, 122, 0) 0%, rgb(255, 153, 0) 94.74%) !important;
+  border-radius: 100px !important;
+  border: 1px solid rgb(255, 116, 0) !important;
+  font-style: normal !important;
+  font-weight: 400 !important;
+  font-size: 18px !important;
+  line-height: 27px !important;
+  text-align: center !important;
+  color: rgb(255, 255, 255) !important;
+  padding: 14px 60px 15px !important;
+  text-decoration: none !important;
+  cursor: pointer !important;
+  width: 80% !important;
+  margin: 0px auto !important;
+  height: 60px !important;
+}
+
+.ant-input-affix-wrapper > input.ant-input{
+  background: transparent;
+}
+
+.form-item-style> .ant-form-item-control{
+  margin-bottom: 10px;
+}
+
+@media screen and (min-width: 600px) {
+  .form-container {
+    width: 30%;
+  } 
+  .button-wrapper{
+    width: 30%;
+
+  }
+  }
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +98,6 @@
     transform: rotate(360deg);
   }
 }
+
+
+
