--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,7 @@
   color: #61dafb;
 }
 
-
-
-
-.input-field{
+.input-field {
   background: rgb(231, 238, 245) !important;
   border: 1px solid rgb(231, 239, 248) !important;
   box-sizing: border-box !important;
@@ -46,15 +43,11 @@
   letter-spacing: 1px !important;
 }
 
-
-
-
 .form-container {
   width: 100%;
 }
- 
 
-.button-wrapper{
+.button-wrapper {
   background: linear-gradient(90deg, rgb(255, 122, 0) 0%, rgb(255, 153, 0) 94.74%) !important;
   border-radius: 100px !important;
   border: 1px solid rgb(255, 116, 0) !important;
@@ -72,23 +65,28 @@
   height: 60px !important;
 }
 
-.ant-input-affix-wrapper > input.ant-input{
+.ant-input-affix-wrapper > input.ant-input {
   background: transparent;
 }
 
-.form-item-style> .ant-form-item-control{
+.ant-select-selector {
+  background: transparent !important;
+  border: none !important;
+  text-align: left !important;
+}
+
+.form-item-style > .ant-form-item-control {
   margin-bottom: 10px;
 }
 
 @media screen and (min-width: 600px) {
   .form-container {
     width: 30%;
-  } 
-  .button-wrapper{
+  }
+  .button-wrapper {
     width: 30%;
-
   }
-  }
+}
 
 @keyframes App-logo-spin {
   from {
@@ -98,6 +96,3 @@
     transform: rotate(360deg);
   }
 }
-
-
-
