--- a/src/Screens/LoginScreen/style.css
+++ b/src/Screens/LoginScreen/style.css
@@ -1,27 +1,26 @@
-.login-main-container{
-    width: 100%;
-    position: relative;
+.login-main-container {
+  width: 100%;
+  position: relative;
 }
-
 
 .login-image-background-signin {
-position: relative;
-width: 100%;
-background: url('../../Assets/bg_img.png');
-background-size: cover;
-background-repeat: no-repeat;
-background-position: center top;
+  position: relative;
+  width: 100%;
+  background: url('../../Assets/bg_img.png');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center top;
 }
 
-.login-main-bg-signin{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    padding: 20px 0;
+.login-main-bg-signin {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 20px 0;
 }
 
-.login-content-container{
-    width: 100%;
+.login-content-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,35 +29,33 @@ background-position: center top;
   z-index: 2000;
 }
 
-.login-title-heading{
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    color: #74b3fb;
-    text-align: center;
-    padding-top: 16px;
-    padding-bottom: 30px;
+.login-title-heading {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #74b3fb;
+  text-align: center;
+  padding-top: 16px;
+  padding-bottom: 30px;
 }
 
-.login-back-arrow{
-    color: #fff;
-    position: absolute;
-    left: 30px;
-    top: 30px;
+.login-back-arrow {
+  color: #fff;
+  position: absolute;
+  left: 30px;
+  top: 30px;
 }
 a {
-    color: #fff;
-  }
-
-
-.login-arrow-link{
-    color: #fff;
+  color: #fff;
 }
 
+.login-arrow-link {
+  color: #fff;
+}
 
-.login-heading-logo{
-    font-style: normal;
+.login-heading-logo {
+  font-style: normal;
   font-weight: 600;
   font-size: 60px;
   line-height: 86px;
@@ -68,12 +65,12 @@ a {
   padding-bottom: 0px;
   margin: 50px 0 0 0;
 }
-.logo-span-color{
-    color: #ff9900;
+.logo-span-color {
+  color: #ff9900;
 }
 
-.login-desp-heading{
-    font-style: normal;
+.login-desp-heading {
+  font-style: normal;
   font-weight: 200;
   font-size: 18px;
   line-height: 18px;
@@ -84,9 +81,8 @@ a {
   margin: 0px;
 }
 
-
-.login-form-main-container{
-    text-align: center;
+.login-form-main-container {
+  text-align: center;
   width: 100%;
   margin: 30px auto;
   margin-top: 70px;
@@ -97,8 +93,14 @@ a {
   padding: 0 20px;
 }
 
-.login-form-heading{
-    font-style: normal;
+.forgot-password-link {
+  color: white;
+  font-size: 15px;
+  margin-bottom: 18px;
+}
+
+.login-form-heading {
+  font-style: normal;
   font-weight: 600;
   font-size: 24px;
   line-height: 36px;
@@ -108,8 +110,8 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .login-image-background-signin {
-      background-size: cover;
-      background-position: center center;
-    }
+  .login-image-background-signin {
+    background-size: cover;
+    background-position: center center;
+  }
 }
