--- a/src/App.css
+++ b/src/App.css
@@ -34,8 +34,8 @@
   box-sizing: border-box !important;
   border-radius: 3px !important;
   width: 100% !important;
-  margin: 0px auto 20px !important;
-  padding: 15px 20px !important;
+  margin: 0px auto 14px !important;
+  padding: 15px 14px !important;
   font-style: normal !important;
   font-weight: normal !important;
   font-size: 16px !important;
@@ -73,6 +73,10 @@
   background: transparent !important;
   border: none !important;
   text-align: left !important;
+}
+
+.ant-form-item {
+  margin-bottom: 0px !important;
 }
 
 .form-item-style > .ant-form-item-control {
