--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -2,16 +2,16 @@
   width: 100%;
 }
 .register-background-image {
-  position: relative;
+  position: relative; 
   width: 100%;
   height: 1030px;
 
   background: url('../../Assets//bg_img.png');
-  background-size: cover;
+  background-size: cover; 
   background-repeat: no-repeat;
   background-position: center top;
 }
-.modal-styling {
+.modal-styling { 
   left: 0 !important;
   padding: 0 !important;
   right: 0 !important;
@@ -41,4 +41,57 @@
     background-size: cover;
     background-position: center center;
   }
+}
+
+.register-mainBgSignin{
+  /* background: linear-gradient(0deg, rgba(27, 104, 179, 0.6) 0%, #1b68b3 99.97%); */
+  position: relative;
+  width: 100%;
+  height: 900px;
+  padding: 20px 0;
+}
+.register-contentMainScreen {
+  width: 100%;
+}
+.register-loginPageH1{
+  font-style: normal;
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 86px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  padding-top: 40px;
+  padding-bottom: 0px;
+  margin: 0px;
+}
+.register-logoSpanColor {
+  color: #ff9900;
+}
+.register-mainScreenP {
+  font-style: normal;
+  font-weight: 200;
+  font-size: 18px;
+  line-height: 27px;
+  letter-spacing: 0.18em;
+  text-transform: uppercase;
+  color: #ffffff;
+  text-align: center;
+  margin: 0px;
+}
+.register-contentFooterAreaSignin {
+  text-align: center;
+  width: 90%;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+.register-signinHeadingH3 {
+  font-style: normal;
+  font-weight: 600;
+  font-size: 24px;
+  line-height: 36px;
+  text-align: center;
+  color: #ffffff;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
