--- a/src/Screens/VehicleInspectionScreen/style.css
+++ b/src/Screens/VehicleInspectionScreen/style.css
@@ -37,6 +37,7 @@
   align-items: center;
   justify-content: space-between;
   margin-top: 10px;
+  flex-wrap: wrap;
 }
 .veh-inspection-first_card {
   width: 48%;
