--- a/src/Components/InstructionModal/style.css
+++ b/src/Components/InstructionModal/style.css
@@ -46,15 +46,37 @@
   top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 30px !important;
+  height: 100%;
 }
 
 .ant-modal-body {
   border-radius: 30px;
+  height: 100% !important;
 }
 
 .ant-modal-wrap > div {
   width: 100% !important;
   height: 100% !important;
+}
+
+.modal-image {
+  width: 80%;
+  height: 200px;
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.modal-images {
+  width: 100%;
+  height: 80%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-inside-image {
+  width: 100%;
+  height: 50%;
 }
 @media screen and (min-width: 600px) {
   .button-container {
