--- a/src/Screens/IntroScreen/style.css
+++ b/src/Screens/IntroScreen/style.css
@@ -19,13 +19,17 @@
     }
 }
 .intro-mainBg {
-    background: linear-gradient(0deg, rgba(27, 104, 179, 0) 50%, #1b68b3 99.97%);
+    background: linear-gradient(0deg, rgba(9, 11, 12, 0) 50%, #1b68b3 99.97%);
     position: relative;
     width: 100%;
     height: 100%;
 }
-.intro-contentMain-screen{
+.thank-contentMain-screen{
   width: 100%;
+  display: flex;
+  align-items: flex-end;
+  justify-content: center;
+  height: 90%;
 }
 .intro-headingH5{
     font-style: normal;
@@ -97,9 +101,40 @@
     text-decoration: none;
     width: 260px;
 }
+
+.thankyou-contentP{
+  font-size: 24px;
+  font-weight: 600;
+  text-align: center;
+  color: white;
+}
+.thankyou-chex-contentP{
+  font-size: 36px;
+  font-weight: 600;
+  text-align: center;
+  color: white;
+}
+.thank-you-paragrpah{
+  font-size: 14px;
+  color: #B2C7F0;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+.thank-text-contaner{
+  width: 30%;
+ 
+}
+
+
 @media screen and (max-width: 600px) {
     .intro-signinBtn{
       width: 80%;
+    }
+
+    .thank-text-contaner{
+      width: 100%;
     }
 }
 .intro-contentDiv-button{
