--- a/src/Components/SideBar/style.css
+++ b/src/Components/SideBar/style.css
@@ -25,6 +25,7 @@
   background-color: #fff;
   border-bottom: 1px solid #e5e5e5;
   padding: 14px;
+  color: black;
   align-items: center;
   cursor: pointer;
 }
