--- a/src/App.css
+++ b/src/App.css
@@ -83,6 +83,12 @@
   /* margin-bottom: 10px; */
 }
 
+.ant-input-affix-wrapper > input.ant-input {
+  border: none !important;
+  box-shadow: none !important;
+  font-family: sans-serif !important;
+}
+
 @media screen and (min-width: 600px) {
   .form-container {
     width: 30%;
