--- a/src/Screens/LoginScreen/style.css
+++ b/src/Screens/LoginScreen/style.css
@@ -1,13 +1,15 @@
 .login-main-container {
   width: 100%;
   position: relative;
+  background: url('../../Assets/bg_img.png');
+  height: 100%;
 }
 
 .login-image-background-signin {
   position: relative;
   width: 100%;
-  background: url('../../Assets/bg_img.png');
-  background-size: cover; 
+
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
 }
