--- a/src/Screens/ConfirmEmailScreen/style.css
+++ b/src/Screens/ConfirmEmailScreen/style.css
@@ -1,6 +1,7 @@
 .login-main-container {
   width: 100%;
-  position: relative;
+  position: absolute;
+  height: 100%;
 }
 
 .login-image-background-signin {
