--- a/src/Components/InstructionModal/style.css
+++ b/src/Components/InstructionModal/style.css
@@ -36,7 +36,7 @@
 }
 
 .instruction-modal-step {
-  margin-top: 10px;
+  margin-top: 40px;
   text-align: left;
 }
 
@@ -46,12 +46,14 @@
   top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 30px !important;
-  height: 100%;
+  height: 80%;
 }
 
 .ant-modal-body {
   border-radius: 30px;
   height: 100% !important;
+  display: flex;
+  align-items: center;
 }
 
 .ant-modal-wrap > div {
@@ -60,10 +62,11 @@
 }
 
 .modal-image {
-  width: 80%;
+  width: 100%;
   height: 200px;
   border-radius: 10px;
   margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .modal-images {
@@ -75,6 +78,11 @@
 }
 
 .modal-inside-image {
+  width: 100%;
+  height: 50%;
+}
+
+.instruction-moadl-video {
   width: 100%;
   height: 50%;
 }
