--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -1,17 +1,20 @@
 .register-main-container {
   width: 100%;
+  position: absolute;
+  height: 100%;
 }
 .register-background-image {
-  position: relative; 
+  position: relative;
   width: 100%;
-  height: 1030px;
+  height: 100%;
 
-  background: url('../../Assets//bg_img.png');
-  background-size: cover; 
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
+  background: url('../../Assets//bg_img.png');
+  padding-bottom: 10px;
 }
-.modal-styling { 
+.modal-styling {
   left: 0 !important;
   padding: 0 !important;
   right: 0 !important;
@@ -24,7 +27,7 @@
   justify-content: center;
 }
 
-.checkmark::before { 
+.checkmark::before {
   display: none !important;
 }
 .checkmark::after {
@@ -43,7 +46,7 @@
   }
 }
 
-.register-mainBgSignin{
+.register-mainBgSignin {
   /* background: linear-gradient(0deg, rgba(27, 104, 179, 0.6) 0%, #1b68b3 99.97%); */
   position: relative;
   width: 100%;
@@ -53,7 +56,7 @@
 .register-contentMainScreen {
   width: 100%;
 }
-.register-loginPageH1{
+.register-loginPageH1 {
   font-style: normal;
   font-weight: 600;
   font-size: 60px;
