--- a/src/Components/InstructionModal/style.css
+++ b/src/Components/InstructionModal/style.css
@@ -39,37 +39,62 @@
   margin-top: -2px;
   text-align: left;
 }
+.ant-modal-close-x {
+  color: white !important;
+  margin-top: 10px !important;
+}
 
-.ant-modal-content {
-  width: 37%;
-  left: 50.5%;
+
+/* .ant-modal-content {
+  width: 100% !important;
+  left: 50%;
+  padding: 0px !important;
   top: 50%;
   transform: translate(-50%, -50%);
   border-radius: 30px !important;
-  height: 80%;
+  height: 100%;
+} */
+.ant-modal-content {
+  top: 35% !important; 
+  box-shadow: none !important;
+  left: 50% !important; 
+  right: auto !important;
+  bottom: auto !important;
+  margin-right: -50% !important;
+  transform: translate(-50%, -50%) !important;
+  height:  100% !important;
+  /* background-color: #12579b !important; */
+  padding: 10px 20px !important;
+  width: 100% !important;
 }
 
 .ant-modal-body {
   border-radius: 30px;
   height: 100% !important;
-  /* display: flex; */
-  align-items: center;
+  display: flex !important;
+  align-items: center !important;
+  flex-direction: column !important;
 }
-
+.modal-inside-image {
+  display: flex;
+  flex-direction: column;
+}
 .ant-modal-wrap > div {
   width: 100% !important;
   height: 100% !important;
 }
+.modal-video {
+  width: 70% !important;
+}
 
 .modal-image {
-  width: 100%;
   height: 200px;
   border-radius: 10px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-.modal-images {
+.modal-images { 
   width: 100%;
   height: 80%;
   display: flex;
@@ -77,14 +102,26 @@
   justify-content: center;
 }
 
-.modal-inside-image {
-  width: 100%;
-  height: 50%;
-}
-
 .instruction-moadl-video {
   width: 100%;
   height: 50%;
+}
+.video-container {
+  /* background-color: red !important; */
+  height: 100% !important;
+  display: flex !important; 
+  justify-content: center !important;
+  align-items: center !important;
+}
+
+.instruction-modalls .ant-modal-content {
+  background: #266FB7;
+  margin-top: 10px;
+}
+
+.instruction-modalls .ant-modal-close{
+  top: 8%;
+  right: 2%
 }
 @media screen and (min-width: 600px) {
   .button-container {
@@ -95,5 +132,19 @@
 @media screen and (max-width: 700px) {
   .ant-modal-content {
     width: 100%;
+  }
+  .modal-video {
+    width: 80% !important;
+  }
+
+  .instruction-modalls .ant-modal-close{
+    top: 0;
+    right: 0;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .modal-video {
+    width: 100% !important;
   }
 }
