--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -1,11 +1,11 @@
 .register-main-container {
   width: 100%;
-  position: absolute;
+  /* position: absolute; */
   height: 100%;
 }
 .register-background-image {
   position: relative;
-  width: 100%;
+  width: 100%; 
   height: 100%;
 
   background-size: cover;
@@ -43,6 +43,12 @@
   .register-background-image {
     background-size: cover;
     background-position: center center;
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .button-wrapper {
+    width: 100% !important;
   }
 }
 
@@ -97,4 +103,12 @@
   color: #ffffff;
   margin-top: 40px;
   margin-bottom: 20px;
+}
+@media only screen and (min-width: 1900px) {
+  .ant-form-item .ant-select, .ant-form-item .ant-cascader-picker {
+    width: 505px !important;
+  } 
+  .ant-form-item-control-input { 
+    width: 505px !important;
+  }
 }
