--- a/src/Screens/TranscationScreen/style.css
+++ b/src/Screens/TranscationScreen/style.css
@@ -3,7 +3,7 @@
 }
 .container {
   background: linear-gradient(182.55deg, #1876cc -17.67%, #001b51 115.19%), #191a1b;
-  height: 100%;
+  /* height: 100%; */
   position: absolute;
   width: 100%;
 }
