--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 }
 
 .form-container {
-  width: 100%;
+  width: 66%;
 }
 
 .button-wrapper {
@@ -93,12 +93,42 @@
 }
 @media screen and (min-width: 600px) {
   .form-container {
-    width: 30%;
+    width: 66%;
   }
   .button-wrapper {
     width: 30%;
   }
 }
+
+@media screen and (max-width: 600px) {
+  .form-container {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 900px) {
+  .form-container {
+    width: 40%;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .form-container {
+    width: 30%;
+  }
+}
+
+/* @media screen and (min-width: 850px) {
+  .form-container {
+    width: 66%;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .form-container {
+    width: 66%;
+  }
+} */
 
 @keyframes App-logo-spin {
   from {
