fix modal issues

--- a/src/App.css
+++ b/src/App.css
@@ -57,12 +57,12 @@
   line-height: 27px !important;
   text-align: center !important;
   color: rgb(255, 255, 255) !important;
-  padding: 14px 60px 15px !important;
+  padding: 10px 60px !important;
   text-decoration: none !important;
   cursor: pointer !important;
   width: 260px !important;
   margin: 0px auto !important;
-  height: 54px !important;
+  /* height: 54px !important; */
 }
 
 .ant-input-affix-wrapper > input.ant-input {
