--- a/src/Components/InstructionModal/style.css
+++ b/src/Components/InstructionModal/style.css
@@ -35,15 +35,25 @@
   display: none;
 }
 
+.instruction-modal-step-container {
+  color: white;
+  margin: auto;
+  width: 30%;
+}
+
 .instruction-modal-step {
-  margin-top: -2px;
+  margin-top: 10px;
   text-align: left;
+  margin-left: 30px;
+  font-size: 13px;
+  width: 100%;
+  line-height: 18px;
+  color: #b2c7f0;
 }
 .ant-modal-close-x {
   color: white !important;
   margin-top: 10px !important;
 }
-
 
 /* .ant-modal-content {
   width: 100% !important;
@@ -55,21 +65,21 @@
   height: 100%;
 } */
 .ant-modal-content {
-  top: 35% !important; 
+  top: 35% !important;
   box-shadow: none !important;
-  left: 50% !important; 
-  right: auto !important; 
+  left: 50% !important;
+  right: auto !important;
   bottom: auto !important;
   margin-right: -50% !important;
   transform: translate(-50%, -50%) !important;
-  height:  100% !important;
+  height: 100% !important;
   /* background-color: #12579b !important; */
   padding: 10px 20px !important;
   width: 100% !important;
 }
 
 .ant-modal-body {
-  border-radius: 30px; 
+  border-radius: 30px;
   height: 100% !important;
   display: flex !important;
   align-items: center !important;
@@ -97,14 +107,13 @@
   height: 100% !important;
 }
 
-.ant-modal-wrap.survay-modallsss > div{
+.ant-modal-wrap.survay-modallsss > div {
   width: 100% !important;
   height: 650px !important;
-  
 }
 
-.survay-modallsss .ant-modal-close-x{
-color: black !important;
+.survay-modallsss .ant-modal-close-x {
+  color: black !important;
 }
 .modal-video {
   width: 70% !important;
@@ -112,12 +121,13 @@ color: black !important;
 
 .modal-image {
   height: 200px;
+  width: 30%;
   border-radius: 10px;
   margin-bottom: 10px;
   margin-top: 10px;
 }
 
-.modal-images { 
+.modal-images {
   width: 100%;
   height: 80%;
   display: flex !important;
@@ -132,19 +142,26 @@ color: black !important;
 .video-container {
   /* background-color: red !important; */
   height: 100% !important;
-  display: flex !important; 
+  display: flex !important;
   justify-content: center !important;
   align-items: center !important;
 }
 
 .instruction-modalls .ant-modal-content {
-  background: #266FB7; 
+  /* background: #266fb7; */
   margin-top: 10px;
+  border-radius: 30px;
+  background: transparent;
+  /* background: linear-gradient(182.55deg, #1876cc -17.67%, #051532 115.19%), #191a1b; */
 }
 
-.instruction-modalls .ant-modal-close{
+.ant-modal-wrap.instruction-modalls {
+  background: linear-gradient(182.55deg, #1876cc -17.67%, #051532 115.19%), #191a1b;
+}
+
+.instruction-modalls .ant-modal-close {
   top: 8%;
-  right: 2%
+  right: 2%;
 }
 @media screen and (min-width: 600px) {
   .button-container {
@@ -160,7 +177,7 @@ color: black !important;
     width: 80% !important;
   }
 
-  .instruction-modalls .ant-modal-close{
+  .instruction-modalls .ant-modal-close {
     top: 0;
     right: 0;
   }
@@ -169,5 +186,24 @@ color: black !important;
 @media only screen and (max-width: 500px) {
   .modal-video {
     width: 100% !important;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .modal-image {
+    width: 90%;
+  }
+
+  .instruction-modal-step-container {
+    width: 90%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .instruction-modal-step-container {
+    width: 95%;
+  }
+  .instruction-modal-step {
+    margin-left: 10px;
   }
 }
