--- a/src/Components/SurveyModal/style.css
+++ b/src/Components/SurveyModal/style.css
@@ -9,7 +9,7 @@
   text-align: center;
 }
 .server-form-price {
-  font-size: 26px; 
+  font-size: 26px;
   color: #ff7a00;
   font-weight: bold;
 }
@@ -34,6 +34,7 @@
 .server-form-rating-stars {
   text-align: center;
   padding-top: 12px;
+  margin-left: 20px;
 }
 .star-container svg {
   height: 26px !important;
@@ -107,7 +108,6 @@
   border-radius: 3px;
   border: none;
   width: 100% !important;
-
 }
 .server-form-textarea::placeholder {
   color: #8c9dae;
@@ -118,7 +118,7 @@
   padding: 0px !important;
 }
 
-.survey-modal .ant-modal-content{
+.survey-modal .ant-modal-content {
   border-radius: 0px !important;
   width: 30% !important;
 }
@@ -126,12 +126,11 @@
   background-color: inherit !important;
 }
 
-.survay-modallsss .ant-modal-content{
+.survay-modallsss .ant-modal-content {
   border-radius: 0px !important;
   width: 30% !important;
   border-radius: 30px !important;
 }
-
 
 @media only screen and (max-width: 450px) {
   .server-form-paragraph {
@@ -166,7 +165,7 @@
   border: none !important;
 }
 .survey-modal-link {
-  color: #0057AC;
+  color: #0057ac;
   font-size: 10px;
   text-align: center;
   margin-top: 8px;
@@ -179,25 +178,18 @@
 }
 
 @media only screen and (max-width: 900px) {
- 
-.survay-modallsss .ant-modal-content{
-  border-radius: 0px !important;
-  width: 100% !important;
-  border-radius: 30px !important;
+  .survay-modallsss .ant-modal-content {
+    border-radius: 0px !important;
+    width: 100% !important;
+    border-radius: 30px !important;
+  }
 }
-}
-
 
 @media only screen and (min-width: 700px) {
- 
   .server-form-textarea {
     background-color: #dae6f1;
     border-radius: 3px;
     border: none;
-    width:  80% !important;
-  
+    width: 80% !important;
   }
-  }
-
-
-
+}
