--- a/src/Screens/ContactUsScreen/style.css
+++ b/src/Screens/ContactUsScreen/style.css
@@ -9,7 +9,7 @@
 .contact-us-main_container {
   background: linear-gradient(182.55deg, #1876cc -17.67%, #001b51 115.19%), #191a1b;
   /* height: 100%; */
-  height: 8 21px;
+  height: 100%;
   position: absolute;
   width: 100%;
   background-size: cover;
@@ -111,6 +111,7 @@
   .contact-us-main_container {
     display: flex;
     justify-content: center;
+    height: 850px;
   }
 }
 @media only screen and (min-width: 700px) {
