--- a/src/Screens/DoAndDoesScreen/style.css
+++ b/src/Screens/DoAndDoesScreen/style.css
@@ -58,7 +58,7 @@
     font-weight: 400;
     line-height: 21px;
     letter-spacing: 0em;
-    text-align: center;
+    text-align: start !important;
     color: #888888;
     padding: 30px;
 }
