--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -24,6 +24,9 @@
   height: 100%;
   overflow: scroll;
 }
+.register-checkbox-text {
+  color: #ffffff;
+}
 .register-container {
   display: flex;
   justify-content: center;
