--- a/src/Screens/TermsAndPolicyScreen/style.css
+++ b/src/Screens/TermsAndPolicyScreen/style.css
@@ -17,3 +17,6 @@
     border: 1px solid #FC6522 !important;
     border-width: 0 3px 3px 0 !important;
 } 
+.left-icon-termsAndPolicy {
+    font-size: 20px !important;
+}
