--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -51,11 +51,11 @@
   }
 }
 
-@media only screen and (max-width: 800px) {
+/* @media only screen and (max-width: 800px) {
   .button-wrapper {
     width: 100% !important;
   }
-}
+} */
 
 .register-mainBgSignin {
   /* background: linear-gradient(0deg, rgba(27, 104, 179, 0.6) 0%, #1b68b3 99.97%); */
