--- a/src/Screens/VehicleInspectionScreen/style.css
+++ b/src/Screens/VehicleInspectionScreen/style.css
@@ -8,7 +8,7 @@
   text-align: center;
   color: #ffffff;
   margin-bottom: 0;
-} 
+}
 .vec-inspection-top_header {
   display: flex;
   align-items: center;
@@ -60,6 +60,7 @@
   line-height: 27px;
   letter-spacing: 0em;
   margin-top: 15px;
+  height: 54px !important;
 }
 .vec-inspection-submitbtn_container {
   padding: 30px;
