--- a/src/Screens/VehicleStatusScreen/style.css
+++ b/src/Screens/VehicleStatusScreen/style.css
@@ -60,6 +60,7 @@
   line-height: 27px;
   letter-spacing: 0em;
   margin-top: 15px;
+  height: 54px !important;
 }
 .vec-inspection-submitbtn_container {
   padding: 30px;
