--- a/src/Screens/VehicleInspectionScreen/style.css
+++ b/src/Screens/VehicleInspectionScreen/style.css
@@ -8,7 +8,7 @@
   text-align: center;
   color: #ffffff;
   margin-bottom: 0;
-} 
+}
 .vec-inspection-top_header {
   display: flex;
   align-items: center;
@@ -30,6 +30,7 @@
   letter-spacing: 0em;
   text-align: center;
   color: #1468ba;
+  margin-left: -30px;
 }
 
 .veh-inspection-cards_container {
