made ui changes after review

--- a/src/Screens/TranscationScreen/style.css
+++ b/src/Screens/TranscationScreen/style.css
@@ -49,7 +49,7 @@
   color: #889bad;
   margin-bottom: 6px;
   margin-top: 10px;
-  font-family: sans-serif !important;
+  /* font-family: sans-serif !important; */
 }
 
 input,
