--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,8 @@
 .ant-input-affix-wrapper > input.ant-input {
   border: none !important;
   box-shadow: none !important;
-  font-family: sans-serif !important;
+  font-family: 'Poppins' !important;
+  font-size: 16px !important;
 }
 .react-stars-wrapper-002155496152759251:focus {
   border: none !important;
