--- a/src/Components/Input/style.css
+++ b/src/Components/Input/style.css
@@ -10,6 +10,6 @@
   font-weight: normal !important;
   font-size: 16px !important;
   line-height: 24px !important;
-  font-family: sans-serif !important;
+  /* font-family: sans-serif !important; */
   letter-spacing: 1px !important;
 }
