--- a/src/Components/InspectionCard/style.css
+++ b/src/Components/InspectionCard/style.css
@@ -40,7 +40,7 @@
   letter-spacing: 0em;
   text-align: center;
   color: #1262b1;
-  margin-bottom: 0px;
+  margin-bottom: 0px !important;
   margin-top: 5px;
 }
 
@@ -48,4 +48,8 @@
   width: 100%;
   height: 95px;
   border-radius: 10px;
+}
+
+.ant-collapse-content > .ant-collapse-content-box {
+  padding: 14px !important;
 }
