--- a/src/Screens/VehicleInspectionScreen/style.css
+++ b/src/Screens/VehicleInspectionScreen/style.css
@@ -30,7 +30,7 @@
   letter-spacing: 0em;
   text-align: center;
   color: #1468ba;
-  margin-left: -30px;
+  margin-left: -30px !important;
 }
 
 .veh-inspection-cards_container {
