--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@
   font-style: normal !important;
   font-weight: normal !important;
   font-size: 16px !important;
+  font-family: 'Poppins' !important;
   line-height: 24px !important;
   letter-spacing: 1px !important;
 }
