--- a/src/Screens/SignUpScreen/style.css
+++ b/src/Screens/SignUpScreen/style.css
@@ -8,7 +8,7 @@
 .register-background-image {
   position: absolute;
   width: 100%;
-  height: 900px !important;
+  height: 960px !important;
 
   background-size: cover !important;
   background-repeat: no-repeat;
@@ -99,6 +99,13 @@
   margin: 0 auto;
   margin-top: 20px;
 }
+
+.registration-warn-message {
+  background: rgb(247, 178, 22);
+  color: white;
+  border-radius: 4px;
+  margin-bottom: 13px;
+}
 .register-signinHeadingH3 {
   font-style: normal;
   font-weight: 600;
@@ -109,6 +116,10 @@
   margin-top: 40px;
   margin-bottom: 20px;
 }
+.warn-message-wrapper {
+  margin: auto;
+  width: 300px;
+}
 @media only screen and (min-width: 1900px) {
   .ant-form-item .ant-select,
   .ant-form-item .ant-cascader-picker {
@@ -116,5 +127,14 @@
   }
   .ant-form-item-control-input {
     width: 505px !important;
+  }
+  .registration-warn-message {
+    width: 50%;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .warn-message-wrapper {
+    width: 100%;
   }
 }
