--- a/src/Screens/VehicleDetailScreen/style.css
+++ b/src/Screens/VehicleDetailScreen/style.css
@@ -42,7 +42,7 @@
   color: #889bad;
   margin-bottom: 6px;
   margin-top: 10px;
-  /* font-family: sans-serif !important; */
+  font-family: 'Poppins' !important;
 }
 
 input,
