adds tile and lyft confirmation modal

--- a/src/Screens/IntroScreen/style.css
+++ b/src/Screens/IntroScreen/style.css
@@ -79,6 +79,14 @@
   align-items: center;
   justify-content: center;
 }
+
+.intro-validation-text {
+  text-align: center;
+  color: white;
+}
+.intro-state-name {
+  color: #ff7400;
+}
 .intro-MtB5 {
   /* margin-bottom: 42px; */
   padding: 20px;
