fix lyft checks

--- a/src/Components/LyftConfirmationModal/style.css
+++ b/src/Components/LyftConfirmationModal/style.css
@@ -5,8 +5,9 @@
 }
 
 .ant-modal-wrap.modalSize > div {
-  height: 50% !important;
+  height: 100% !important;
   width: 50% !important;
+  background: white;
 }
 
 .textSize {
@@ -15,9 +16,18 @@
   color: black;
 }
 
+.register-modal-btn {
+}
+
 @media screen and (max-width: 998px) {
   .ant-modal-wrap.modalSize > div {
     height: 50% !important;
     width: 100% !important;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  .register-modal-btn {
+    font-size: 14px !important;
   }
 }
