--- a/src/Components/InspectionButtonModalComponent/style.css
+++ b/src/Components/InspectionButtonModalComponent/style.css
@@ -1,9 +1,8 @@
 .inspection-modal-container .ant-modal-content {
   width: 317px !important;
-  height: auto !important;
   border-radius: 10px !important;
   overflow-y: scroll;
-  height: 510px !important;
+  height: 500px !important;
   padding: 10px !important;
 }
 
@@ -80,7 +79,7 @@ color: black;
   background: linear-gradient(90deg, #FF7A00 0%, #FF9900 94.74%);
 border-radius: 100px;
 padding: 7px;
-width: 70%;
+width: 100%;
 display: flex;
 justify-content: center;
 align-items: center;
@@ -118,4 +117,10 @@ cursor: pointer;
     font-weight: 400;
     background-color: rgb(233, 233, 233);
 
+  }
+
+  @media only screen and (max-width:399px) {
+    .inspection-modal-container .ant-modal-content {
+      width: 285px !important;
+    }
   }
