--- a/src/Screens/VehicleCombinedStatusScreen/style.css
+++ b/src/Screens/VehicleCombinedStatusScreen/style.css
@@ -1,9 +1,9 @@
-.content-main-container {
+/* .content-main-container {
   width: 375px;
   border-radius: 20px;
-  /* background-color: #084e8f ; */
-  /* margin-top: 40px; */
-}
+   background-color: #084e8f ; 
+   margin-top: 40px; 
+} */
 
 .main-container {
   background: linear-gradient(0deg, rgba(27, 104, 179, 0.6) 0%, #1b68b3 99.97%);
@@ -22,6 +22,7 @@
   border-radius: 20px;
   margin-top: 30px;
   height: auto;
+  padding: 5px;
 }
 .white-border-bottom_container {
   display: flex;
@@ -33,4 +34,17 @@
   border-bottom: 2px solid white;
   width: 80%;
   margin-top: 20px;
+}
+
+
+
+
+
+
+.container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl {
+  width: 100%;
+  padding-right: 0px;
+  padding-left: 0px;
+  margin-right: auto;
+  margin-left: auto;
 }
