--- a/src/Screens/VehicleInspectionScreen/style.css
+++ b/src/Screens/VehicleInspectionScreen/style.css
@@ -75,3 +75,27 @@
   border-bottom: 7px solid #e5e5e5 !important;
 }
 
+.header-min-width{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+.header-max-width{
+  width: 30%;
+}
+
+@media only screen and (max-width:1026px){
+  .header-max-width{
+    width: 60%;
+  }
+}
+@media only screen and (max-width:901px){
+  .header-max-width{
+    width: 70%;
+  }
+}
+@media only screen and (max-width:768px){
+  .header-max-width{
+    width: 100%;
+  }
+}
