--- a/src/Components/ConfirmationModal/style.css
+++ b/src/Components/ConfirmationModal/style.css
@@ -30,8 +30,8 @@
 
 .sure-modal .ant-modal-content {
   border-radius: 15px;
-  height: 70% !important;
-  width: 27% !important;  
+  height: 45% !important;
+  width: 90% !important;  
 }
 
 .d-flex {
@@ -76,7 +76,7 @@
 
 
 
-
+/* 
 @media only screen and (max-width:1000px) {
  
   .sure-modal .ant-modal-content {
@@ -84,13 +84,35 @@
     height: 68% !important;
     width: 50% !important;
   }
-}
+} */
 
-@media only screen and (max-width:768px) {
+/* @media only screen and (max-width:768px) {
  
   .sure-modal .ant-modal-content {
     border-radius: 15px;
     height: 68% !important;
     width: 85% !important;
   }
+} */
+
+.yes-btn-container{
+  background-color: orange;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
+  border-radius: 100px;
+  color: white;
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.no-btn-container{
+  border: 2px solid orange;
+  justify-content: center;
+  align-items: center;
+  padding: 13px;
+  border-radius: 100px;
+  margin-top: -20px;
+  color: black;
+  font-size: 16px;
 }
