--- a/src/Components/InspectionCard/style.css
+++ b/src/Components/InspectionCard/style.css
@@ -31,7 +31,7 @@
   text-align: center;
   color: #2a2a2a;
   margin-bottom: 0px;
-  margin-top: 8px;
+  margin-top: 12px;
 }
 .veh-inspection-photo_text {
   font-size: 12px;
@@ -39,7 +39,7 @@
   font-weight: 400;
   line-height: 18px;
   letter-spacing: 0em;
-  text-align: center;
+  text-align: start;
   color: #1262b1;
   margin-bottom: 0px !important;
   margin-top: 5px;
