--- a/src/Components/InspectionCard/style.css
+++ b/src/Components/InspectionCard/style.css
@@ -39,7 +39,7 @@
   font-weight: 400;
   line-height: 18px;
   letter-spacing: 0em;
-  text-align: start;
+  text-align: center;
   color: #1262b1;
   margin-bottom: 0px !important;
   margin-top: 5px;
