--- a/src/Components/TabContentComponent/style.css
+++ b/src/Components/TabContentComponent/style.css
@@ -3,11 +3,18 @@
   justify-content: space-between;
   width: 300px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-  padding: 10px;
+  padding: 14px;
 }
 .ant-modal-content {
   width: 300px !important;
-  height: 200px !important;
+  height: 240px !important;
+  border-radius: 10px !important;
+}
+ .ant-modal-content .companies-modal{
+   background-color: white;
+   width: 300px !important;
+  /* height: 300px; */
+  padding: 10px;
   border-radius: 10px !important;
 }
 .ant-modal-footer {
@@ -43,7 +50,7 @@
 display: flex;
 align-items: center;
 justify-content: space-between;
-margin-top: 10px;
+margin-top: 22px;
 width: 100%;
 }
 .modal-links-text {
@@ -60,6 +67,7 @@ width: 100%;
   color: #1468ba;
 }
 
-{
-  position: none !important;
+.checkbox-container{
+  width: 16px;
+  height: 16px;
 }
